Feat : Global Nav css 추가

--- a/apple-clone/src/components_sk/Mac.css
+++ b/apple-clone/src/components_sk/Mac.css
@@ -1,3 +1,23 @@
+#ac-globalnav {
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 9999;
+    display: block;
+    margin: 0;
+    width: 100%;
+    min-width: 1024px;
+    height: 48px;
+    max-height: 44px;
+    background: rgba(0,0,0,0.92);
+    font-size: 17px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+
 .chapternav {
     background: rgba(245,245,247,0.7);
     padding: 0;
