Feat : Product component 완료

--- a/apple-clone/src/components_sk/Mac.css
+++ b/apple-clone/src/components_sk/Mac.css
@@ -1,3 +1,5 @@
+/* nav */
+
 #ac-globalnav {
     top: 0;
     right: 0;
@@ -221,4 +223,228 @@ a:link, a:visited, .link:link, .link:visited {
     0%{opacity:0}
     1%{transform:translateX(160px)}
     100%{opacity:1;transform:translateX(0)}
+}
+
+
+
+/* product */
+
+section {
+    display: block;
+}
+
+.section-hero-product {
+    padding: 130px 0;
+    border-bottom: 10px solid #f5f5f7;
+}
+
+.section-hero-product {
+    padding: 110px 0 70px;
+    overflow: hidden;
+    margin-top: 0;
+}
+
+.section-content {
+    margin-left: auto;
+    margin-right: auto;
+    width: 980px;
+}
+
+.section-hero-product .section-content {
+    align-items: center;
+    text-align: center;
+}
+
+.large-centered {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+div {
+    display: block;
+}
+
+.large-7 {
+    flex-basis: 58.33333%;
+    max-width: 58.33333%;
+}
+
+.section-hero-product .violator-frameless {
+    font-weight: 600;
+    margin-bottom: 0.3em;
+    background: rgba(0,0,0,0);
+    border-color: #bf4800;
+    color: #f56300;
+}
+
+.violator-frameless {
+    box-sizing: border-box;
+    white-space: nowrap;
+    display: block;
+    color: #bf4800;
+}
+
+.typography-hero-violator {
+    font-size: 17px;
+    line-height: 1.47059;
+    font-weight: 400;
+    letter-spacing: -.022em;
+    font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+}
+
+
+.typography-hero-product-headline {
+    font-size: 56px;
+    line-height: 1.07143;
+    font-weight: 600;
+    letter-spacing: -.005em;
+    font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+}
+
+.section-hero-product .typography-hero-product-headline:lang(ko) {
+    line-height: 1.07143;
+}
+
+[class*="typography-eyebrow"] {
+    display: block;
+    margin-bottom: 0.4em;
+}
+
+.typography-eyebrow-elevated {
+    font-size: 28px;
+    line-height: 1.14286;
+    font-weight: 600;
+    letter-spacing: .007em;
+    font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+}
+
+.section-hero-product .section-content .product-wrapper .hero-copy {
+    margin-top: 0;
+}
+
+
+[class*="typography-eyebrow"]+* {
+    margin-top: 0;
+}
+
+.section-hero-product .section-content .product-wrapper .hero-pricing .hero-price {
+    margin-top: 1.35em;
+}
+
+.typography-body {
+    font-size: 17px;
+    line-height: 1.47059;
+    font-weight: 400;
+    letter-spacing: -.022em;
+    font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+}
+
+.section-hero-product .section-content .product-wrapper .cta-links {
+    margin-top: 10px;
+}
+
+.section-hero-product .section-content .product-wrapper .cta-links .link-container {
+    display: inline-block;
+    margin: 0 10px;
+}
+
+.typography-hero-product-link {
+    font-size: 21px;
+    line-height: 1.381;
+    font-weight: 400;
+    letter-spacing: .011em;
+    font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+}
+
+a.icon-wrapper {
+    text-decoration: none;
+}
+
+a, .link {
+    color: #06c;
+    letter-spacing: inherit;
+}
+
+.icon-wrapper .icon, .icon-wrapper .more::after, .icon-wrapper .icon-before::before, .icon-wrapper .icon-after::after {
+    display: inline;
+    position: static;
+}
+
+
+
+.button {
+    cursor: pointer;
+    display: inline-block;
+    text-align: center;
+    white-space: nowrap;
+    font-size: 17px;
+    line-height: 1.17648;
+    font-weight: 400;
+    letter-spacing: -.022em;
+    font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+    min-width: 28px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    border-radius: 980px;
+    background: #0071e3;
+    color: #fff;
+}
+
+
+.large-12 {
+    flex-basis: 100%;
+    max-width: 100%;
+}
+
+.section-hero-product .section-content .product-wrapper .hero-image {
+    margin-top: 65px;
+}
+
+.section-hero-product.section-mac-studio {
+    padding-top: 122px;
+}
+.section-hero-product .section-content .product-wrapper .hero-image.hero-mac-studio-image {
+    width: 470px;
+    height: 232px;
+    background-size: 470px 232px;
+    background-repeat: no-repeat;
+    background-image: url(https://apple.com/v/mac/home/bm/images/overview/hero/mac_studio__c2wojtx43pw2_large.jpg);
+    position: relative;
+    left: 50%;
+    margin-left: -235px;
+}
+
+
+.section-hero-product.section-studio-display {
+    padding: 45px 0;
+}
+
+.section-hero-product .section-content .product-wrapper .hero-image.hero-studio-display-image {
+    width: 548px;
+    height: 422px;
+    background-size: 548px 422px;
+    background-repeat: no-repeat;
+    background-image: url(https://apple.com/v/mac/home/bm/images/overview/hero/studio_display__cn9qj5umkwya_large.jpg);
+    position: relative;
+    left: 50%;
+    margin-left: -274px;
+    margin-top: 38px;
+}
+
+.section-hero-product.section-macbook-pro {
+    border-bottom: none;
+    padding-top: 117px
+}
+
+.section-hero-product .section-content .product-wrapper .hero-image.hero-macbook-pro-image {
+    width: 834px;
+    height: 282px;
+    background-size: 834px 282px;
+    background-repeat: no-repeat;
+    background-image: url(https://apple.com/v/mac/home/bm/images/overview/hero/macbook_pro_14_16__dmqm5vr9l7yq_large.jpg);
+    position: relative;
+    left: 50%;
+    margin-left: -417px;
 }
